@@ -43,6 +43,24 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -267,6 +285,37 @@ argument_list|(
 name|dir
 argument_list|,
 literal|false
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+expr_stmt|;
+specifier|final
+name|List
+name|onlySegments
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|onlySegments
+operator|.
+name|add
+argument_list|(
+literal|"_0"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|CheckIndex
+operator|.
+name|check
+argument_list|(
+name|dir
+argument_list|,
+literal|false
+argument_list|,
+name|onlySegments
 argument_list|)
 argument_list|)
 expr_stmt|;
